# contadordeovo

./: .gitignore  Contador de ovos.bat  README.md  atualizar-contador.bat  iniciar-contador.bat  parar-contador.bat  train.py
docs/: gerar-apresentacao-pdf.py
java/bff/: .gitignore  .gitmodules  README.md  pom.xml
java/bff/.cursor/: README.md
java/bff/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
java/gateway/: .gitignore  README.md  pom.xml
java/gateway/.cursor/: README.md
python/egg/: .env.example  .gitignore  README.md  pyproject.toml
python/egg/config/: camera.video-ovos3.yaml  camera.video-padrao.yaml  camera.video-testes.yaml  camera.yaml  runtime.ensemble-colab.yaml  runtime.roboflow.yaml  runtime.video-ovos3.yaml  runtime.video-padrao.yaml  runtime.video-testes.yaml  runtime.yaml
python/egg/src/egg_counter/: __init__.py  api.py  config.py  counting.py  dataset.py  detection.py  main.py  models.py  pipeline.py  processador_main.py  service.py  session.py  tracking.py  train.py
python/egg/tests/: test_config.py  test_counting.py  test_dataset.py  test_detection.py  test_ensemble_consensus.py  test_pipeline.py  test_profiles.py  test_roboflow_parse.py  test_session.py  test_tracking.py  test_train.py
react/egg/: .env.local.example  README.md  package-lock.json  package.json
react/egg/.cursor/: README.md
react/egg/src/app/: globals.css  layout.tsx  page.tsx
scripts/: atualizar-contador.ps1  iniciar-contador.ps1  parar-contador.ps1
scripts/launcher/: server.py  splash.html
(+216 files in other folders)
